# bunq-ynab-connect

./: .docker-env.example  .env.example  .gitignore  .pre-commit-config.yaml  README.md  commands.md  prefect.yaml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  compose.override.yml  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: build.yml  cicd.yml  deploy.yaml  version_bumper.yml
bunq_ynab_connect/: __init__.py  bootstrap.md  bootstrap.py  flows.py  main.py  prefect.yaml  ruff.toml  worker.py
bunq_ynab_connect/classification/: budget_category_encoder.py  classifier.py  deployable_mlflow_model.py  deployable_model.py  deployer.py  feature_extractor.py  feature_store.py  trainer.py
bunq_ynab_connect/classification/datasets/: abstract_dataset.py  matched_transactions_dataset.py
bunq_ynab_connect/classification/experiments/: base_payment_classification_experiment.py  classifier_selection_experiment.py  classifier_tuning_experiment.py  feature_testing_experiment.py  find_best_model_experiment.py  full_training_experiment.py
bunq_ynab_connect/classification/mlserver/: settings.json
bunq_ynab_connect/classification/preprocessing/: alias_features.py  auto_gluon_features.py  counterparty_category_features.py  counterparty_similarity_features.py  description_features.py  dict_to_transaction_transformer.py  features.py  over_sampler.py  simple_features.py  under_sampler.py
bunq_ynab_connect/clients/: bunq_client.py  ynab_client.py
bunq_ynab_connect/clients/bunq/: base_client.py  session_activator.py  signer.py
bunq_ynab_connect/clients/tests/: test_bunq_client.py
bunq_ynab_connect/config/metadata/tables/: bunq_payments.json  bunq_transactions.json  ynab_accounts.json  ynab_budgets.json
bunq_ynab_connect/data/: bunq_account_to_ynab_account_mapper.py  bunq_payment_to_ynab_transaction_mapper.py  data_extractors.md  metadata.md  metadata.py  payment_matcher.py  storage.md  table_metadata.py
bunq_ynab_connect/data/data_extractors/: abstract_data_extractor.py  abstract_extractor.py  bunq_account_extractor.py  bunq_extractor.py  bunq_payment_extractor.py  ynab_account_extractor.py  ynab_budget_extractor.py  ynab_transaction_extractor.py
bunq_ynab_connect/data/storage/: abstract_storage.py  mongo_storage.py
bunq_ynab_connect/helpers/: config.py  general.py  json_dict.py
bunq_ynab_connect/metadata/tables/: bunq_accounts.json  matched_transactions.json  payment_classifications.json  payment_queue.json  ynab_transactions.json
bunq_ynab_connect/models/: __init__.py  bunq_account.py  bunq_payment.py  matched_transaction.py  schema.py  table.py  ynab_account.py  ynab_budget.py  ynab_transaction.py
bunq_ynab_connect/models/ynab/: bunq_account.py  bunq_payment.py  matched_transaction.py  ynab_budget.py  ynab_transaction.py
bunq_ynab_connect/scripts/: remove_old_mlflow_runs.py
bunq_ynab_connect/sync_bunq_to_ynab/: bunq_account_to_ynab_account_mapper.py  callback_server.py  payment_queue.py  payment_syncer.py  transaction_syncer.py
docker/: Dockerfile  Dockerfile2  compose.yaml  compose.yml  development.yml  docker-compose.yml  entrypoint.sh  entrypoint_mlserver.sh  pi.yaml  portainer.yaml  portainer_ce.yaml  provide_docker_access.sh  stack.env  traefik.yml
dockertest2/: Dockerfile  pyproject.toml
docs/: README.md  classification.md  commands.md  development.md  infrastructure.md  orchestration.md
experiments/: experiment.ipynb
notebooks/: test.ipynb
tests/clients/: test_bunq_client.py  test_ynab_client.py
tests/data/: test_mongo_storage.py
