[project]
name = "bunq-ynab-connect"
version = "0.1.0"
description = "Automatically classify Bunq transactions and add to Ynab"
dependencies = [
    "mlflow>=2.16.0",
    "bunq-sdk>=1.14.18",
    "ynab>=0.0.3",
    "prefect<3.0.0",
    "scikit-learn>=1.5.1",
    "kink>=0.8.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "pymongo>=4.8.0",
    "prefect-dask<0.3.0",
    "mlserver",
    "mlserver-mlflow>=1.3.5",
    "pydantic<2.0",
    # Griffe pin required to prevent 1.2.0, inconsisten with prefect
    "griffe==0.49.0",
    "fastapi>=0.114.0",
    "fastapi-cli>=0.0.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mongomock>=4.1.2",
    "bz2file>=0.98",
    "ruff>=0.6.3",
]
excluded-dependencies = ["pywin32"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bunq_ynab_connect"]

[tool.rye.workspace]
members = ["bunq_ynab_connect"]
