[project]
name = "bunq-ynab-connect"
version = "0.1.0"
description = "Automatically classify Bunq transactions and add to Ynab"
dependencies = [
    "mlflow",
    "ynab",
    "scikit-learn",
    "kink",
    "python-dotenv",
    "click",
    "pymongo",
    "prefect-dask",
    "mlserver>=1.6",
    "mlserver-mlflow",
    "pydantic",
    "griffe",
    "fastapi",
    "fastapi-cli",
    "prefect",
    "imbalanced-learn>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mongomock>=4.1.2",
    "bz2file>=0.98",
    "ruff>=0.6.3",
]
excluded-dependencies = ["pywin32"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bunq_ynab_connect"]

[tool.rye.workspace]
members = ["bunq_ynab_connect"]
