[tool.poetry]
name = "bunq-ynab-connect"
version = "0.1.0"
description = "Automatically classify Bunq transactions and add to Ynab"
authors = ["Aucke Bos <aucke.bos97@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bunq_ynab_connect"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
mlflow = "^2.6.0"
bunq-sdk = "^1.14.18"
ynab = "^0.0.3"
prefect = "^2.11.4"
scikit-learn = "^1.3.0"
kink = "^0.6.6"
python-dotenv = "^1.0.0"
click = "^8.1.7"
pymongo = "^4.5.0"
interpret = "^0.4.4"
prefect-dask = "^0.2.5"
bokeh = "2.4.3"
mlserver = "^1.3.5"
virtualenv = "^20.23.1"
mlserver-mlflow = "^1.3.5"
gevent = "^23.7.0"

# Exclude yarl from installation
#[tool.poetry.dependencies.yarl]
#version = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
pytest = "^7.4.0"
mongomock = "^4.1.2"
bz2file = "^0.98"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bunqynab = "bunq_ynab_connect.main:cli"

[tool.isort]
profile = "black"